[gd_scene format=3 uid="uid://bnhg0r1hnnkic"]

[ext_resource type="Texture2D" uid="uid://c5me4vlodbcrq" path="res://harpoon/harpoon.png" id="1_mrewk"]
[ext_resource type="Script" uid="uid://b2y3h86fla48l" path="res://harpoon/harpoon.gd" id="1_yxyyu"]
[ext_resource type="Shader" uid="uid://c4q7bhpn08x4f" path="res://harpoon/harpoon_glow.gdshader" id="2_x8ecc"]
[ext_resource type="Texture2D" uid="uid://bx7ipix1pbgbw" path="res://kenney_fish-pack_2/Vector/bubble_b.svg" id="3_0v313"]
[ext_resource type="PackedScene" uid="uid://0v6ktdjfkgnt" path="res://rope/rope_controller.tscn" id="5_axc4k"]
[ext_resource type="Texture2D" uid="uid://cptgxq2lplwe4" path="res://effects/glow_texture.tres" id="5_cvga1"]
[ext_resource type="Script" path="res://harpoon/fish_collection.gd" id="7_mynk6"]
[ext_resource type="Script" path="res://harpoon/harpoon_effects.gd" id="8_cwi3x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cvga1"]
shader = ExtResource("2_x8ecc")
shader_parameter/glow_intensity = 0.0
shader_parameter/glow_color = Color(1, 0.7, 0.3, 1)
shader_parameter/glow_tip_bias = 2.5

[sub_resource type="Curve" id="Curve_0v313"]
_data = [Vector2(0.021526419, 0.42201173), 0.0, 0.0, 0, 0, Vector2(0.2994129, 0.7015307), 0.0, 0.0, 0, 0, Vector2(0.8688845, 0.014577389), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_njfb7"]
curve = SubResource("Curve_0v313")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yxyyu"]
particle_flag_disable_z = true
angle_min = -389.6
angle_max = 25.500011
direction = Vector3(0, -1, 0)
spread = 76.111
initial_velocity_max = 41.18
gravity = Vector3(0, -50, 0)
scale_min = 0.02
scale_max = 0.19999999
scale_curve = SubResource("CurveTexture_njfb7")
color = Color(1, 1, 1, 0.43529412)
collision_mode = 2

[node name="Harpoon" type="CharacterBody2D" unique_id=2066894074]
collision_layer = 2
script = ExtResource("1_yxyyu")

[node name="ShaftSprite" type="Sprite2D" parent="." unique_id=1163446627]
unique_name_in_owner = true
position = Vector2(0, -6.5)
texture = ExtResource("1_mrewk")
region_enabled = true
region_rect = Rect2(0, 0, 15, 51)

[node name="HeadSprite" type="Sprite2D" parent="." unique_id=141835807]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_cvga1")
position = Vector2(0, 25.5)
texture = ExtResource("1_mrewk")
region_enabled = true
region_rect = Rect2(0, 51, 15, 12)

[node name="HarpoonGlow" type="PointLight2D" parent="HeadSprite" unique_id=2056863213]
unique_name_in_owner = true
position = Vector2(0, -1.5)
color = Color(1, 0.85, 0.5, 1)
energy = 0.0
texture = ExtResource("5_cvga1")
texture_scale = 2.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." unique_id=468457962]
unique_name_in_owner = true
position = Vector2(0, 24)
polygon = PackedVector2Array(0, 7, 7, 1, 7, -5, -7, -5, -7, 2)

[node name="TrailBubblesParticles" type="GPUParticles2D" parent="." unique_id=21785781]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, 21)
emitting = false
amount = 15
texture = ExtResource("3_0v313")
fixed_fps = 0
process_material = SubResource("ParticleProcessMaterial_yxyyu")

[node name="RopeMarker" type="Marker2D" parent="." unique_id=1239523546]
unique_name_in_owner = true
position = Vector2(0, -30)

[node name="RopeController" parent="RopeMarker" unique_id=1910049717 instance=ExtResource("5_axc4k")]
length = 600.0
gravity = Vector2(0, -90)

[node name="FishCollection" type="Node" parent="." unique_id=1346351518]
script = ExtResource("7_mynk6")

[node name="HarpoonEffects" type="Node" parent="." unique_id=931542303]
script = ExtResource("8_cwi3x")
